Fixed alignment

--- a/app/components/Home.css
+++ b/app/components/Home.css
@@ -5,18 +5,18 @@
 
 .products-container {
   display: grid;
-  grid-template-columns: 33% 33% 33%;
-  column-gap: 10px;
+  grid-template-columns: 32.2% 32.2% 32.2%;
+  column-gap: 1.4%;
   row-gap: 15px;
   max-width: 80%;
   width: 800px;
   margin: 80px auto 90px auto;
-  padding: 0.5px 0;
 }
 
 @media only screen and (max-width: 600px) {
   .products-container {
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 48% 48%;
+    column-gap: 3%;
     max-width: 90%;
   }
 }
